Fix extra__price on IE on desktop

--- a/source/sass/blocks/extra.scss
+++ b/source/sass/blocks/extra.scss
@@ -190,7 +190,7 @@
   }
 
   @include lg-size() {
-    width: 45px;
+    width: 48px;
     text-align: left;
   }
 }
